spring-data-jpa/src/main/java/ru/sabitov/example/error/ValidationErrorResponse.java
package ru.sabitov.example.error;

import java.util.List;

public record ValidationErrorResponse(List<FieldErrorDescription> errors) {
}
